--- a/travelApp/View/Base.lproj/Main.storyboard
+++ b/travelApp/View/Base.lproj/Main.storyboard
@@ -40,6 +40,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="osv-wS-RUo">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.27111309770000003" green="0.44423550369999998" blue="0.60221952199999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -225,7 +226,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Convert" id="k4p-LO-v4A">
                         <barButtonItem key="rightBarButtonItem" style="done" systemItem="refresh" id="zfB-Od-oVs">
-                            <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="refreshRatesTapped:" destination="Hoj-fk-EDa" id="3z9-cy-lX5"/>
                             </connections>
@@ -679,11 +680,11 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Zwx-TW-wRc">
                                 <rect key="frame" x="20" y="208" width="354" height="585"/>
                                 <subviews>
-                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UZ0-eO-GXq">
-                                        <rect key="frame" x="0.0" y="-80" width="354" height="80"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UZ0-eO-GXq">
+                                        <rect key="frame" x="0.0" y="0.0" width="354" height="282.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GVf-vK-YhV">
-                                                <rect key="frame" x="20" y="40" width="314" height="0.0"/>
+                                                <rect key="frame" x="20" y="40" width="314" height="202.5"/>
                                                 <string key="text">Tap on the button on the top left  hand corner to get your current position forecast. Or search for a specific city by using the search bar. You can set your registerd location in settings.</string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -697,26 +698,26 @@
                                             <constraint firstItem="GVf-vK-YhV" firstAttribute="top" secondItem="UZ0-eO-GXq" secondAttribute="top" constant="40" id="snN-ld-qkB"/>
                                         </constraints>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Ob5-9F-LWz">
-                                        <rect key="frame" x="0.0" y="0.0" width="354" height="282.5"/>
+                                    <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Ob5-9F-LWz">
+                                        <rect key="frame" x="0.0" y="292.5" width="354" height="20"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="xds-i1-ts9">
-                                                <rect key="frame" x="0.0" y="0.0" width="354" height="131.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="354" height="0.0"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your local or searched location forecast." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hLg-xw-Kzm">
-                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="28.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="0.0"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="N/A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jvl-0f-u0p">
-                                                        <rect key="frame" x="0.0" y="28.5" width="354" height="66"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="0.0"/>
                                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="40"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" N/A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9KE-yN-hvI" userLabel="N/A">
-                                                        <rect key="frame" x="0.0" y="94.5" width="354" height="37"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="0.0"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
@@ -724,23 +725,22 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="tbH-Mu-fx3">
-                                                <rect key="frame" x="0.0" y="151.5" width="354" height="131"/>
+                                                <rect key="frame" x="0.0" y="20" width="354" height="0.0"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="cloud" translatesAutoresizingMaskIntoConstraints="NO" id="PoA-ru-MkM">
-                                                        <rect key="frame" x="0.0" y="0.0" width="131.5" height="131.00000000000003"/>
                                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="PoA-ru-MkM" secondAttribute="height" multiplier="1:1" id="ejJ-3j-ocD"/>
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="N/A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y3h-PU-3Vw">
-                                                        <rect key="frame" x="165" y="29.5" width="102.5" height="72"/>
+                                                        <rect key="frame" x="99.5" y="0.0" width="102.5" height="0.0"/>
                                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="60"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="°C" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zxt-Ef-cgQ">
-                                                        <rect key="frame" x="301" y="35.5" width="53" height="60"/>
+                                                        <rect key="frame" x="301" y="0.0" width="53" height="0.0"/>
                                                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="50"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
@@ -779,7 +779,7 @@
                                                 <rect key="frame" x="0.0" y="151.5" width="354" height="131"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud" translatesAutoresizingMaskIntoConstraints="NO" id="6t2-LT-AaT">
-                                                        <rect key="frame" x="0.0" y="0.0" width="131.5" height="131.00000000000003"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="131.5" height="131"/>
                                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="6t2-LT-AaT" secondAttribute="height" multiplier="1:1" id="Qle-9g-4LL"/>
@@ -971,6 +971,22 @@
                                 <rect key="frame" x="0.0" y="188" width="414" height="625"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="a8G-du-i5H">
+                                    <rect key="frame" x="0.0" y="135.5" width="414" height="128"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJK-Vn-usW">
+                                            <rect key="frame" x="205" y="53.5" width="4.5" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="FJK-Vn-usW" firstAttribute="centerY" secondItem="a8G-du-i5H" secondAttribute="centerY" id="SpG-oq-U4R"/>
+                                        <constraint firstItem="FJK-Vn-usW" firstAttribute="centerX" secondItem="a8G-du-i5H" secondAttribute="centerX" id="j1j-hT-cfQ"/>
+                                    </constraints>
+                                </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="settingCell" textLabel="tBL-FC-neX" detailTextLabel="4Y8-yw-52E" style="IBUITableViewCellStyleSubtitle" id="NeL-YC-G96">
                                         <rect key="frame" x="0.0" y="28" width="414" height="79.5"/>
